--- a/supertramp/package.json
+++ b/supertramp/package.json
@@ -13,7 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.18.0",
+    "node-sass": "^4.5.0",
     "promise-polyfill": "^6.0.2",
+    "sass-loader": "^6.0.2",
     "vue": "^2.1.0",
     "vue-router": "^2.0.0",
     "vuex": "^2.0.0",
@@ -26,21 +28,21 @@
     "babel-preset-vue-app": "^0.4.0",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.23.1",
     "cross-env": "^2.0.0",
+    "css-loader": "^0.23.1",
     "eslint": "^3.6.0",
     "eslint-config-vue": "latest",
-    "eslint-plugin-vue": "latest",
     "eslint-plugin-testcafe": "^0.2.0",
+    "eslint-plugin-vue": "latest",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.9.0",
     "friendly-errors-webpack-plugin": "^1.1.2",
     "html-webpack-plugin": "^2.22.0",
-    "raw-loader": "^0.5.1",
     "offline-plugin": "^4.5.3",
     "postcss-loader": "^0.9.1",
     "postcss-nested": "^1.0.0",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "testcafe": "^0.12.1",
     "vue-loader": "^10.0.2",
