--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss-nested": "^1.0.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
+    "svg-url-loader": "^2.0.2",
     "testcafe": "^0.12.1",
     "vue-loader": "^10.0.2",
     "vue-template-compiler": "^2.1.3",
