--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "client/index.js",
   "scripts": {
     "test": "testcafe all tests/index.js --app \"npm run dev\" --app-init-delay 10000",
-    "build": "webpack --config build/webpack.prod.js && cp CNAME docs/CNAME",
+    "build": "webpack --config build/webpack.prod.js && cp CNAME docs/CNAME && cd roadtrip && webpack --config build/webpack.prod.conf.js && cp -R dist ../docs/roadtrip",
     "dev": "node build/server.js",
     "lint": "eslint client/* --ext .js --ext .vue"
   },
