--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "supertramp",
   "version": "0.1.0",
-  "description": "source for theronp.com",
+  "description": "source for theron.dev",
   "main": "client/index.js",
   "scripts": {
     "test": "testcafe all tests/index.js --app \"npm run dev\" --app-init-delay 10000",
