--- a/roadtrip/package.json
+++ b/roadtrip/package.json
@@ -9,7 +9,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "build:bison": "cd bison && npm run build && cd .. && cp -R bison/dist ../docs/bison && cd .. && git add docs/bison && git commit -m \"Build and deploy bison section\" && git push origin master"
+    "build:bison": "cd bison && npm run build && cd .. && cp -R bison/dist ../docs/bison && cd .. && git add docs/bison && git commit -m \"Build and deploy bison section\" && git push origin master",
+    "build:deploy": "npm run build && rm -rf ../docs/roadtrip && cp -R dist ../docs/roadtrip && cd bison && npm run build && cd .. && rm -rf ../docs/bison && cp -R bison/dist ../docs/bison && cd .. && git add docs/roadtrip docs/bison && git commit -m \"Build and deploy roadtrip project\" && git push origin master"
   },
   "dependencies": {
     "@tweenjs/tween.js": "^25.0.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue2": "^2.3.1",
     "sass": "^1.32.0",
+    "terser": "^5.43.1",
     "vite": "^5.4.2"
   }
 }
