--- a/roadtrip/bison/package.json
+++ b/roadtrip/bison/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "devDependencies": {
     "@preact/preset-vite": "^2.9.2",
+    "terser": "^5.43.1",
     "vite": "^5.4.11"
   },
   "dependencies": {
