--- a/roadtrip/bison/package.json
+++ b/roadtrip/bison/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:deploy": "cd .. && npm run build:bison",
     "preview": "vite preview"
   },
   "keywords": [],
