--- a/roadtrip/bison/package.json
+++ b/roadtrip/bison/package.json
@@ -15,6 +15,7 @@
   "type": "module",
   "devDependencies": {
     "@preact/preset-vite": "^2.9.2",
+    "less": "^4.3.0",
     "terser": "^5.43.1",
     "vite": "^5.4.11"
   },
