--- a/roadtrip/bison/package.json
+++ b/roadtrip/bison/package.json
@@ -20,6 +20,7 @@
     "vite": "^5.4.11"
   },
   "dependencies": {
-    "preact": "^10.25.2"
+    "preact": "^10.25.2",
+    "react-router-dom": "^7.6.3"
   }
 }
